--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "desafio",
+  "name": "PJI240",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "lint:fix": "eslint --fix . --ext ts,tsx",
-    "test": "jest"
+    "test": "jest",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migrate": "ts-node-dev ./node_modules/typeorm/cli migration:run -d ./src/database/migration/"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -30,7 +35,8 @@
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.3",
-    "ts-node-dev": "^1.1.6",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.2.2"
   }
 }
